# play_flet

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
src/: main.py
