[tool.poetry]
name = "play_flet"
version = "0.1.0"
description = ""
authors = ["shibuiwilliam <shibuiyusuke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.6"
flet = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
